# sigap

./: astro.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.js
front-sigap/: astro.config.mjs  package.json  pnpm-lock.yaml
scraper-api/: .gitignore  pyproject.toml
scraper-api/scraper_api/: __init__.py
scraper-api/scraper_api/endpoints/: login.py
scraper-api/scraper_api/scraper/: __init__.py  __main__.py  login.py  schedule.py
siga-api/: .gitignore  README.md  pyproject.toml
siga-api/siga_api/: main.py
siga-api/siga_api/routers/: auth.py  menu.py  models.py
siga-api/siga_api/scraper/: errors.py  functions.py
src/components/home/: login.astro
src/components/login/: form.astro
src/pages/: index.astro  login.astro
